--- a/product-inventory/package.json
+++ b/product-inventory/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
