--- a/product-inventory/package.json
+++ b/product-inventory/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
+    "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
@@ -16,10 +17,11 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=4444 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "launch": "node_modules\\.bin\\concurrently --kill-others \"node_modules\\.bin\\json-server json-server/db.json\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
