--- a/product-inventory/package.json
+++ b/product-inventory/package.json
@@ -15,6 +15,7 @@
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.13.1",
     "react-toastify": "^6.0.8",
     "simple-react-notifications": "^1.2.16"
   },
